--- a/Template/catering.html
+++ b/Template/catering.html
@@ -16,157 +16,7 @@
     <link href="https://fonts.googleapis.com/css?family=Lora:400,400i"rel="stylesheet">
 
     <!-- page specific styles for catering.html -->
-
-    <style>
-
-      /*Styling h3 and all the text inside menu-class */
-      h3, .menu {
-        text-align: center;
-      }
-
-      /*Styling the p inside menuclasses */
-      .menu p {
-        font-size: 0.9rem;
-      }
-      /*Styling the h4 inside menuclasses */
-      .menu h4 {
-        margin: 2rem 0 -0.5rem;
-        text-transform: none;
-      }
-      /*Styling the h5 inside menuclasses */
-      .menu h5 {
-        margin-bottom: -0.7rem;
-        font-family: 'Lato', sans-serif;
-        text-transform: uppercase;
-        color: #999;
-        font-size: 0.7rem;
-      }
-
-      p.menuNorskForklaring {
-        margin: -1rem 0 -1rem;
-        font-size: 0.8rem;
-      }
-
-      .menu small {
-        font-size: 0.6rem;
-        font-family: Lato, sans-serif;
-        color: #999;
-      }
-
-      p#download {
-        display: inline-block;
-        width:50%;
-        margin: 0;
-      }
-      a#buttonDownload {
-        float:right
-      }
-
-      a.button svg {
-        fill: #099;
-        position: relative;
-        bottom: -0.3rem;
-        left: -0.5rem;
-      }
-
-      a.button::before {
-        content: ' ';
-      }
-
-      a.button:hover svg {
-        fill: #fff;
-      }
-
-      .menu ul {
-        list-style-type: none;
-        text-align: center;
-        padding:0;
-      }
-
-      ul.dessert li {
-        padding-bottom: 0.9rem;
-      }
-
-      ul.tabPanel {
-        margin-right: 0;
-        padding:0;
-        overflow: hidden;
-        margin: auto;
-      }
-
-      /* All list element underneath eachother*/
-      ul.tabPanel li {
-        display: block;
-      }
-
-      /* Styling of the different modes for links in the tabbed menu panel*/
-      ul.tabPanel li a {
-        display: inline-block;
-        font-weight: bold;
-        color: #999;
-        border-bottom: 0;
-        height: 3rem;
-        padding: 0 3.2rem;
-        line-height: 3rem;
-        letter-spacing: .05em;
-        transition: .2s color;
-      }
-
-      /* Styling of the animated line beneath the text in the tabbed menu panel */
-      ul.tabPanel li a::after {
-        content: '';
-        display: block;
-        height: 6px;
-        background: #3cc;
-        margin: -.3em auto 0;
-        width: 0;
-        transition: .2s width;
-      }
-
-      /* Styling of the different modes for links in tabbed menu panel*/
-      ul.tabPanel li a:active,
-      ul.tabPanel li a:hover,
-      ul.tabPanel li a.isActive, /* active page class */
-      ul.tabPanel li a:focus {
-        color: #fff;
-      }
-
-      /* The line beneath the links in the tabbed menu panel goes to full width */
-      ul.tabPanel li a:active::after,
-      ul.tabPanel li a:hover::after,
-      ul.tabPanel li a.isActive::after, /* active page class */
-      ul.tabPanel li a:focus::after {
-        width: 100%;
-      }
-
-      /*The content is initially not shown */
-      .tabContent {
-        display:none;
-      }
-
-      /* Layout for screens larger than 960px
-         ================================================================================ */
-      @media screen and (min-width: 960px) {
-
-        /* Float all list-elements on one horizontal line and center */
-        ul.tabPanel li {
-          display: inline-block;
-          float: none;
-        }
-
-        /*Moving the boxes in the correct place*/
-        .menu {
-          margin-top: -12rem;
-        }
-        .cateringQuote {
-          margin-top: -4rem;
-          z-index: 2;
-        }
-        .lastRow {
-          margin-bottom: 4rem;
-        }
-      }
-    </style>
+    <link rel="stylesheet" href="css/style-catering.css">
 
   </head>
 
