--- a/Template/kantine.html
+++ b/Template/kantine.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Da Carlo Template</title>
+    <title>Da Carlo Catering - Kantine</title>
 
     <!-- define viewport to ensure no horizontal scroll -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -15,56 +15,9 @@
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lora:400,400i"rel="stylesheet">
 
-    <!-- Internal styles -->
-    <style>
+    <!-- page specific styles for kantine.html -->
+    <link rel="stylesheet" href="css/style-kantine.css">
 
-      /* Mobile first */
-      @media screen and (min-width: 960px){
-
-        .right{
-          margin-top: -8rem;
-          z-index: 2;
-        }
-        .left{
-          margin-top: -2rem;
-        }
-
-        .container footer {
-          font-family: 'Lato', sans-serif;
-          font-size: .8rem;
-          line-height: 1;
-        }
-
-
-
-        body {
-          background: fixed url('img/hero_catering.jpg') no-repeat;
-          background-size: cover;
-          margin: 0;
-
-        }
-        h3{
-          line-height: 1.2;
-
-        }
-
-        #nets-logo{
-
-            margin: 2em 0 4em 0;
-        }
-        #list-right{
-          float: right;
-          margin: 0;
-        }
-        #container-left{
-          float: left;
-          width: 400px;
-        }
-
-      }
-
-
-    </style>
   </head>
   <script>
 
@@ -114,10 +67,6 @@
 
       </section>
 
-      <!-- NOTE : FUNKER IKKE: boks på siden til høyre  -->
-    <!---  <section class="row"  -->
-
-      </section>
       <section class="row">
         <div class="container">
           <div class="box left">
