--- a/Template/kontakt.html
+++ b/Template/kontakt.html
@@ -14,7 +14,7 @@ PURPOSE: provide a channel of contact between potential customers and Da Carlo
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Kontakt oss</title>
+    <title>Da Carlo Catering - Kontakt oss</title>
 
     <!-- define viewport to ensure no horizontal scroll -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -22,11 +22,13 @@ PURPOSE: provide a channel of contact between potential customers and Da Carlo
     <!-- include stylesheets -->
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/style_kontakt.css">
 
     <!-- include google fonts -->
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lora:400,400i"rel="stylesheet">
+
+    <!-- page specific styles for kontakt.html -->
+    <link rel="stylesheet" href="css/style-kontakt.css">
 
   </head>
 
@@ -66,8 +68,12 @@ PURPOSE: provide a channel of contact between potential customers and Da Carlo
           <div class="text-wrapper">
             <h2>Kontakt</h2>
 
-              <p id="introtext">Ikke nøl med å ta kontakt for en uforpliktende samtale der vi ser om vi kan imøtekomme dine behov og preferanser. Vårt mål er å gjøre din sammenkomst til en minneverdig, og genuin smaksopplevelse med en latinsk signatur!
-                Trenger du en dyktig og erfaren kokk med gode referanser til firmaets kantine, ta kontakt.
+              <p id="introtext">
+                Ikke nøl med å ta kontakt for en uforpliktende samtale der vi ser
+                om vi kan imøtekomme dine behov og preferanser. Vårt mål er å
+                gjøre din sammenkomst til en minneverdig, og genuin smaksopplevelse
+                med en latinsk signatur! Trenger du en dyktig og erfaren kokk med
+                gode referanser til firmaets kantine, ta kontakt.
               </p>
               <div class="right">
                 <p class="phone">+47 428 83 247</p>
@@ -90,85 +96,99 @@ PURPOSE: provide a channel of contact between potential customers and Da Carlo
               <h3>Be om pristilbud</h3>
               <p>Hva ønsker du pristilbud på?</p>
 
-<!-- NOTE: KNAPPER -->
-              <!-- NoKnapper som velger hva slags type kunde du er -->
+              <!-- NOTE: KNAPPER -->
+              <!-- Tab panel buttons, select customer type -->
               <div class="btn-wrapper">
                 <a href="javascript:void(0)" class="panelLinks button left" onclick="openPanel(event, 'catering')" id="defaultOpen"> Cateringtjenester </a>
-
                 <a href="javascript:void(0)" class="panelLinks button right" onclick="openPanel(event, 'canteen')"> Kantinedrift </a>
               </div>
 
-              <!-- Du har valgt catering -->
+              <!-- form for catering customer -->
               <div id="catering" class="tabContent">
-              <h3>Om arrangementet</h3>
-              <p>Da Carlo kan levere cateringtjenester til alle typer arrangementer. </p>
-              <form>
-                <input id="date" class="right" type="date" name="dato" placeholder="Dato" =""/>
-                <label for="dato">Dato</label>
+                <h3>Om arrangementet</h3>
+                <p>Da Carlo kan levere cateringtjenester til alle typer arrangementer. </p>
 
-                <input id="place" type="text" name="adresse" placeholder="Adresse" />
-                <label for="adresse">Adresse</label>
+                <form>
+                  <input id="date" class="right" type="date" name="dato" placeholder="Dato"/>
+                  <label for="dato">Dato</label>
 
-                <input id="guestNo" type="text" name="antallGjester" placeholder="Antall gjester" />
-                <label for="antallGjester">Antall Gjester</label>
+                  <input id="place" type="text" name="adresse" placeholder="Adresse"/>
+                  <label for="adresse">Adresse</label>
 
-                <div class="styledSelect">
-                  <select  id="meny" name="meny" value="Ønsket meny" >
-                    <!--Drop down menu-->
-                    <option value="" disabled selected>Velg din meny</option>
-                    <option value="meny1">Meny 1</option>
-                    <option value="meny2">Meny 2</option>
-                    <option value="meny3">Meny 3</option>
-                  </select>
+                  <input id="guestNo" type="text" name="antallGjester" placeholder="Antall gjester"/>
+                  <label for="antallGjester">Antall Gjester</label>
 
-                </div>
-                <textarea id="cateringInfo" name="extraInfo" placeholder="Fortell oss om ditt arrangement" ></textarea>
+                  <div class="styledSelect">
+                    <select  id="meny" name="meny" value="Ønsket meny" >
+                      <!--Drop down menu-->
+                      <option value="" disabled selected>Velg din meny</option>
+                      <option value="meny1">Meny 1</option>
+                      <option value="meny2">Meny 2</option>
+                      <option value="meny3">Meny 3</option>
+                    </select>
+                  </div>
+
+                  <textarea id="cateringInfo" name="extraInfo" placeholder="Fortell oss om ditt arrangement" ></textarea>
+
+                  <h3>Om deg</h3>
+                  <p>Legg igjen din kontaktinformasjon, så tar vi kontakt så snart som mulig.</p>
+                  <input type="text" id="name" name="navn" placeholder="Ditt navn" />
+                  <label for="name">Ditt navn</label>
+
+                  <input type="tel" id="number" name="telefonnummer" placeholder="Ditt telefonnummer"/>
+                  <label for="number">Ditt telefonnummer</label>
+
+                  <input type="email" id="email" name="epost" placeholder="Din e-postadresse" />
+                  <label for="email">Din e-postadresse</label>
+
+                  <!-- SUBMIT - BUTTON -->
+                  <div class="btn-wrapper">
+                    <!-- <input id="btnSubmit" type="submit" name="submit" value="Send prisforespørsel" onclick="submitInfo()" /> -->
+                    <a id="btnSubmit" href="#" name="submit" class="button" onclick="submitInfo()">Send prisforespørsel</a>
+                  </div>
+                </form>
               </div>
 
-
-              <!-- Du har valgt kantine -->
-            </form>
+              <!-- form for canteen customer -->
               <div id="canteen" class="tabContent">
-              <h3>Om bedriften</h3>
-              <p>Da Carlo har mange års erfaring med kantinedrift. Fortell oss litt mer om din bedrift og hva du ønsker hjelp til.</p>
-              <form>
-                <input id="companyName" type="text" name="bedriftsNavn" placeholder="Bedriftens navn" />
-                <label for="bedriftsNavn">Bedriftens navn</label>
+                <h3>Om bedriften</h3>
+                <p>Da Carlo har mange års erfaring med kantinedrift. Fortell oss litt mer om din bedrift og hva du ønsker hjelp til.</p>
+                <form>
+                  <input id="companyName" type="text" name="bedriftsNavn" placeholder="Bedriftens navn" />
+                  <label for="bedriftsNavn">Bedriftens navn</label>
 
-                <input id="companyPlace" class="left" type="text" name="bedriftsAdresse" placeholder="Adresse" />
-                <label for="bedriftsAdresse">Adresse</label>
+                  <input id="companyPlace" class="left" type="text" name="bedriftsAdresse" placeholder="Adresse" />
+                  <label for="bedriftsAdresse">Adresse</label>
 
-                <input id="emplNo" class="right" type="text" name="antallAnsatte" placeholder="Antall ansatte" />
-                <label for="antallAnsatte">Antall ansatte</label>
+                  <input id="emplNo" class="right" type="text" name="antallAnsatte" placeholder="Antall ansatte" />
+                  <label for="antallAnsatte">Antall ansatte</label>
 
-                <textarea id="canteenInfo" name="ekstraInfo" placeholder="Hva slags kantinedrift ønsker dere?"></textarea>
+                  <textarea id="canteenInfo" name="ekstraInfo" placeholder="Hva slags kantinedrift ønsker dere?"></textarea>
+
+                  <!-- TODO: remove duplicate person info code -->
+                  <h3>Om deg</h3>
+                  <p>Legg igjen din kontaktinformasjon, så tar vi kontakt så snart som mulig.</p>
+                  <input type="text" id="name" name="navn" placeholder="Ditt navn" />
+                  <label for="name">Ditt navn</label>
+
+                  <input type="tel" id="number" name="telefonnummer" placeholder="Ditt telefonnummer"/>
+                  <label for="number">Ditt telefonnummer</label>
+
+                  <input type="email" id="email" name="epost" placeholder="Din e-postadresse" />
+                  <label for="email">Din e-postadresse</label>
+
+                  <!-- SUBMIT - BUTTON -->
+                  <div class="btn-wrapper">
+                    <!-- <input id="btnSubmit" type="submit" name="submit" value="Send prisforespørsel" onclick="submitInfo()" /> -->
+                    <a id="btnSubmit" href="#" name="submit" class="button" onclick="submitInfo()">Send prisforespørsel</a>
+                  </div>
+                </form>
               </div>
 
-                <h3>Om deg</h3>
-                <p>Legg igjen din kontaktinformasjon, så tar vi kontakt så snart som mulig.</p>
-                <input type="text" id="name" name="navn" placeholder="Ditt navn" />
-                <label for="name">Ditt navn</label>
-
-                <input type="tel" id="number" name="telefonnummer" placeholder="Ditt telefonnummer"/>
-                <label for="number">Ditt telefonnummer</label>
-
-                <input type="email" id="email" name="epost" placeholder="Din e-postadresse" />
-                <label for="email">Din e-postadresse</label>
-
-                <div class="btn-wrapper">
-
-
-      <!-- SUBMIT - BUTTON -->
-                <!-- <input id="btnSubmit" type="submit" name="submit" value="Send prisforespørsel" onclick="submitInfo()" /> -->
-                  <a id="btnSubmit" href="#" name="submit" class="button" onclick="submitInfo()">Send prisforespørsel
-                  </a>
-                </div>
-              </form>
             </div>
           </div>
-      </div>
-    </div>
-    </section>
+        </div>
+      </section>
     </main>
 
     <!-- page footer -->
