--- a/Template/om.html
+++ b/Template/om.html
@@ -27,56 +27,8 @@ PURPOSE: provide information about Da Carlo, their chefs and waitors
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lora:400,400i"rel="stylesheet">
 
-    <style>
-    body {
-      background: fixed url('img/webtek_kylling.jpeg') no-repeat;
-      background-size: cover;
-      margin: 0;
-    }
-
-    .left + figure,
-    .right + figure {
-      top: calc(3.4 * 4rem);
-    }
-
-    #juan {
-      margin-top: 4rem;
-    }
-
-    #cecare {
-      margin: -4rem auto 0;
-      z-index: 1;
-    }
-
-    #roberto {
-      margin: -4rem auto -4rem ;
-      z-index: 0;
-    }
-
-    #camilla {
-      margin: -4rem auto 0;
-      z-index: 1;
-    }
-
-    #camilla p {
-      padding-bottom: 4rem;
-    }
-
-    .cta {
-      margin: 12rem auto 4rem;
-    }
-
-    p.phone {
-      font-size: 1.8rem;
-      display: inline;
-    }
-
-    p.email {
-      font-size:1.1rem;
-      margin-top: 0;
-    }
-
-    </style>
+    <!-- page specific styles for om.html -->
+    <link rel="stylesheet" href="css/style-om.css">
 
   </head>
 
@@ -194,7 +146,7 @@ PURPOSE: provide information about Da Carlo, their chefs and waitors
             </div>
           </div>
           <figure>
-            <img src="img/servitoer.png" alt="" />
+            <img src="img/lmh-servitor.jpg" alt="" />
           </figure>
         </div>
       </section>
