--- a/Project/css/style-kantine.css
+++ b/Project/css/style-kantine.css
@@ -1,41 +1,27 @@
 body {
   background-image: url('../img/header-images/header-catering.jpg');
 }
+  
+.container footer {
+  font-family: 'Lato', sans-serif;
+  font-size: .8rem;
+  line-height: 1;
+}
 
 /* Mobile first */
 @media screen and (min-width: 960px){
 
-  .right{
+  #recommendation-nets-rommen {
     margin-top: -8rem;
     z-index: 2;
   }
-  .left{
-    margin-top: -2rem;
-  }
 
-  .container footer {
-    font-family: 'Lato', sans-serif;
-    font-size: .8rem;
-    line-height: 1;
-  }
-
-  }
-  h3{
+  h3 {
     line-height: 1.2;
-
   }
 
-  #nets-logo{
-
-      margin: 2em 0 4em 0;
-  }
-  #list-right{
-    float: right;
-    margin: 0;
-  }
-  #container-left{
-    float: left;
-    width: 400px;
+  .nets-logo {
+    margin: 2em 0 4em 0;
   }
 
 }
