--- a/Project/css/style-kontakt.css
+++ b/Project/css/style-kontakt.css
@@ -1,3 +1,8 @@
+/* Background image */
+body {
+  background-image: url('../img/header-images/header-kontakt.jpg');
+}
+
 /*general styles*/
 .left {
   float:left;
