--- a/Project/css/style-om.css
+++ b/Project/css/style-om.css
@@ -1,5 +1,6 @@
+/* Background image */
 body {
-  background-image: url('../img/header-images/header-kylling.jpg');
+  background-image: url('../img/header-images/header-om.jpg');
 }
 
 .cta {
