--- a/Project/css/style-catering.css
+++ b/Project/css/style-catering.css
@@ -1,3 +1,8 @@
+/* Background image */
+body {
+  background-image: url('../img/header-images/header-catering.jpg');
+}
+
 /*Styling h3 and all the text inside menu-class */
 h3, .menu {
   text-align: center;
