--- a/Project/css/style-kantine.css
+++ b/Project/css/style-kantine.css
@@ -1,11 +1,16 @@
+/* Background image */
 body {
-  background-image: url('../img/header-images/header-catering.jpg');
+  background-image: url('../img/header-images/header-kantine.jpg');
 }
   
 .container footer {
   font-family: 'Lato', sans-serif;
   font-size: .8rem;
   line-height: 1;
+}
+
+.nets-logo {
+  margin: 2em 0 4em 0;
 }
 
 /* Mobile first */
@@ -20,8 +25,5 @@ body {
     line-height: 1.2;
   }
 
-  .nets-logo {
-    margin: 2em 0 4em 0;
-  }
 
 }
