--- a/Project/css/style-kontakt.css
+++ b/Project/css/style-kontakt.css
@@ -1,3 +1,9 @@
+/* ==========================================================================
+ *
+ *   Page specific style sheet for kontakt.html
+ *
+ * ========================================================================== */
+
 /* Background image */
 body {
   background-image: url('../img/header-images/header-kontakt.jpg');
