--- a/Project/css/style-catering.css
+++ b/Project/css/style-catering.css
@@ -1,3 +1,9 @@
+/* ==========================================================================
+ *
+ *   Page specific style sheet for catering.html
+ *
+ * ========================================================================== */
+
 /* Background image */
 body {
   background-image: url('../img/header-images/header-catering.jpg');
