--- a/Project/css/style-om.css
+++ b/Project/css/style-om.css
@@ -1,3 +1,9 @@
+/* ==========================================================================
+ *
+ *   Page specific style sheet for om.html
+ *
+ * ========================================================================== */
+
 /* Background image */
 body {
   background-image: url('../img/header-images/header-om.jpg');
