--- a/Project/css/style.css
+++ b/Project/css/style.css
@@ -59,15 +59,29 @@ html {
   font-family: 'Lora', serif;
   -webkit-font-smoothing: antialiased; /* font antialiasing in webkit */
   margin: 0;
-  height: 100vh; /* fix for background images on mobile */
-  min-height: 100%; /* fix for background images on mobile */
 }
 
 body {
-  background: url('../img/header-carousel/header-paella.jpg') no-repeat fixed center center;
-  background-size: cover;
-  webkit-background-size: cover; /* fix for safari background size */
   margin: 0;
+}
+
+/* Backround image moved to separate div to fix mobile layout */
+#background-image {
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  position: fixed;
+  z-index: -1; /* place it behind everything */
+  background: #2d2b2b;
+}
+
+/* scale the background image after its height (mobile) */
+#background-image img {
+  height: 100%;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
 }
 
 /* NOTE: Background image is overridden on each page */
@@ -445,6 +459,15 @@ body > footer {
  *
  * ========================================================================== */
 @media screen and (min-width: 960px) {
+
+  /* scale the background image after its width (desktop) */
+  #background-image img {
+    height: auto;
+    left: auto;
+    top: 50%;
+    width: 100%;
+    transform: translate(0, -50%);
+  }
 
   /* lager titles on desktop */
   h2 {
